--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon  app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,9 @@
     "prisma": "^5.13.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
