--- a/api/.env
+++ b/api/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mysql://root:admin@localhost:3306/db-pccom"
-DATABASE_URL="mysql://root:@localhost:3306/pccom"
+DATABASE_URL="mysql://root:admin@localhost:3306/pccom"
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" 
