Actualizar importaciones en App.js, eliminar comentarios y agregar componente Paginate

--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -4,6 +4,7 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Start App",
             "runtimeVersion": "default",
@@ -16,9 +17,9 @@
             "type": "node",
         },
         {
-            "type": "chrome",
+            "type": "msedge",
             "request": "launch",
-            "name": "Run Chrome",
+            "name": "Run Edge",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
         }
