--- a/api/.env
+++ b/api/.env
@@ -6,4 +6,4 @@
 
 # DATABASE_URL="mysql://root:admin@localhost:3306/db-pccom"
 DATABASE_URL="mysql://root:TRUJI661*@localhost:3306/pccom"
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" 
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" TRUJI661*
