--- a/api/.env
+++ b/api/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:admin@localhost:3306/db-pccom"
-DATABASE_URL="mysql://root:TRUJI661*@localhost:3306/pccom"
+DATABASE_URL="mysql://root:admin@localhost:3306/db-pccom"
+# DATABASE_URL="mysql://root:TRUJI661*@localhost:3306/pccom"
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" TRUJI661*
