--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.7",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
